src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ARC_Meeting_Comments__c</fullName>
        <label>ARC Meeting Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Meeting_Decision__c</fullName>
        <label>Approval Meeting Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Meeting_Decision__c</fullName>
        <label>Bid Meeting Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDH_Benefit_Liaison_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDH Benefit Liaison Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_State_of_Meeting_Location__c</fullName>
        <label>City/State of Meeting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Link_1__c</fullName>
        <label>Document Link 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Link_2__c</fullName>
        <label>Document Link 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Link_3__c</fullName>
        <label>Document Link 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Implementation_Name__c</fullName>
        <formula>HYPERLINK(&quot;?id=&quot;&amp;Benefit_Design__r.Implementation__r.Id , &quot;open&quot;)</formula>
        <label>Implementation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>Allows users to select if it is 2-50 or 51+ market segment</description>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>2-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Location_Address__c</fullName>
        <label>Meeting Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Status1__c</fullName>
        <label>Meeting Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bid Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRF Kickoff Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC Approval Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Kickoff Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Structure Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Pre-Kick-Off Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Kick-Off Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Debrief Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Design Review Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Misc_information__c</fullName>
        <label>Misc. information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Bid_Comments__c</fullName>
        <label>No Bid Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Service Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_Up__c</fullName>
        <label>Signed Up</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Translation_Required__c</fullName>
        <label>Translation Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wellness_Serv__c</fullName>
        <label>Wellness Serv</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_of_Meeting_Location1__c</fullName>
        <formula>TEXT( Zip_Code_of_Meeting_Location__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code of Meeting Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_of_Meeting_Location__c</fullName>
        <label>Zip Code of Meeting Location</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>